--- a/package.json
+++ b/package.json
@@ -39,5 +39,10 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@ai-sdk/openai": "^0.0.36",
+		"@ai-sdk/svelte": "^0.0.14",
+		"ai": "^3.2.19"
+	}
 }
