--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"dependencies": {
 		"@ai-sdk/openai": "^0.0.36",
 		"@ai-sdk/svelte": "^0.0.14",
-		"ai": "^3.2.19"
+		"ai": "^3.2.19",
+		"zod": "^3.23.8"
 	}
 }
