--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@ai-sdk/google": "^0.0.26",
 		"@ai-sdk/openai": "^0.0.36",
 		"@ai-sdk/svelte": "^0.0.14",
 		"ai": "^3.2.19",
