--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
 		"@ai-sdk/openai": "^0.0.36",
 		"@ai-sdk/svelte": "^0.0.14",
 		"ai": "^3.2.19",
+		"marked": "^13.0.2",
+		"turndown": "^7.2.0",
 		"zod": "^3.23.8"
 	}
 }
