--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"update": "npm install --save-dev svelte@next @sveltejs/kit@latest",
+		"update": "npm install --save-dev --legacy-peer-deps svelte@next @sveltejs/kit@latest",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -30,7 +30,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"sass": "^1.77.6",
-		"svelte": "^5.0.0-next.179",
+		"svelte": "^5.0.0-next.181",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
