--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"sass": "^1.77.6",
-		"svelte": "^5.0.0-next.181",
+		"svelte": "^5.0.0-next.183",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
@@ -46,6 +46,7 @@
 		"@ai-sdk/svelte": "^0.0.14",
 		"ai": "^3.2.19",
 		"marked": "^13.0.2",
+		"tippy.js": "^6.3.7",
 		"turndown": "^7.2.0",
 		"zod": "^3.23.8"
 	}
