--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"update": "npm install --save-dev --legacy-peer-deps svelte@next @sveltejs/kit@latest",
 		"dev": "vite dev",
-		"build": "npm config set legacy-peer-deps true && vite build",
+		"build": "vite build",
 		"preview": "vite preview",
 		"test": "npm run test:integration && npm run test:unit",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
