--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "template",
+	"name": "copywhisper",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -30,7 +30,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"sass": "^1.77.6",
-		"svelte": "^5.0.0-next.190",
+		"svelte": "^5.0.0-next.192",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
